iptables.rules
*filter


##########
# CHAINS #
##########


:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#OUTPUTLOG#:OUTPUT DROP [0:0]
:TCP - [0:0]
:UDP - [0:0]


#########
# RULES #
#########

#OUTPUTLOG#-A OUTPUT -j LOG --log-level 4 --log-prefix "Output "
#OUTPUTLOG#-A OUTPUT -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#INPUTLOG#-A INPUT -j LOG --log-level 4 --log-prefix "Input    "
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP

##### Ports to open
# DHCP
-A TCP -p tcp --dport 67 -j ACCEPT
-A UDP -p udp --dport 67 -j ACCEPT
# HTTP
-A TCP -p tcp --dport 80 -j ACCEPT
# HTTPS
-A TCP -p tcp --dport 443 -j ACCEPT
# Tests
-A TCP -p tcp --dport 5555 -j ACCEPT
# Borderlands 2
-A UDP -p udp --dport 14001 -j ACCEPT
-A UDP -p udp --dport 7777 -j ACCEPT
# Mumble
-A TCP -p tcp --dport 64738 -j ACCEPT
-A UDP -p UDP --dport 64738 -j ACCEPT
# MPD
-A TCP -p tcp --dport 6600 -j ACCEPT
#####

#INPUTLOG#-A INPUT -j LOG --log-level 4 --log-prefix "Dropped  "
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable


COMMIT
